Fix GitHub Actions environment to use pip-based Ansible

--- a/.github/workflows/ansible-ci.yml
+++ b/.github/workflows/ansible-ci.yml
@@ -9,14 +9,20 @@ on:
 jobs:
   ansible-lint:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.x'
+
       - name: Install Ansible and lint tools
         run: |
-          sudo apt update
-          sudo apt install -y ansible ansible-lint
+          python -m pip install --upgrade pip
+          pip install ansible ansible-lint
 
       - name: Check Ansible syntax
         run: ansible-playbook --syntax-check playbook.yml
