--- a/roles/devops/tasks/main.yml
+++ b/roles/devops/tasks/main.yml
@@ -1,35 +1,37 @@
 - name: Check if Docker is already installed
-  command: docker --version
-  register: docker_installed
-  ignore_errors: yes
+  ansible.builtin.command: docker --version
+  register: devops_docker_installed
+  ignore_errors: true
+  changed_when: false
 
 - name: Install Docker if not present
-  apt:
+  ansible.builtin.apt:
     name: docker.io
     state: present
-    update_cache: yes
-  when: docker_installed.rc != 0
+    update_cache: true
+  when: devops_docker_installed.rc != 0
 
 - name: Ensure Docker Compose plugin is installed
-  apt:
+  ansible.builtin.apt:
     name: docker-compose-plugin
     state: present
-  when: docker_installed.rc != 0
+  when: devops_docker_installed.rc != 0
 
 - name: Ensure Docker service is started
-  service:
+  ansible.builtin.service:
     name: docker
     state: started
     enabled: true
 
 - name: Clone DevOps project repo
-  git:
+  ansible.builtin.git:
     repo: "{{ project_repo }}"
     dest: "{{ project_dest }}"
     version: "{{ project_branch }}"
-    force: yes
+    force: true
 
 - name: Build and start containers
-  command: docker compose up -d
+  ansible.builtin.command: docker compose up -d
   args:
     chdir: "{{ project_dest }}"
+  changed_when: false
